<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".view.fragments.SettingFragment">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="69dp">

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/settings"
                    android:textColor="@color/white"
                    android:textSize="35dp"
                    android:textStyle="bold|italic"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:cardCornerRadius="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView21">

                    <LinearLayout
                        android:layout_width="360dp"
                        android:layout_height="wrap_content"
                        android:background="#B2452E3C"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/location"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="15dp"
                                android:text="@string/location"
                                android:textStyle="bold"
                                android:textColor="@color/white"
                                android:textSize="20dp" />

                            <ImageView
                                android:id="@+id/location_expand"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="215dp"
                                android:layout_marginTop="16dp"
                                android:src="@drawable/baseline_keyboard_arrow_down_24" />
                        </LinearLayout>

                        <RadioGroup
                            android:id="@+id/location_radio"
                            android:layout_width="match_parent"
                            android:visibility="gone"
                            android:layout_height="match_parent">

                            <RadioButton
                                android:id="@+id/gbs"
                                android:layout_width="match_parent"
                                android:checked="true"
                                android:layout_height="wrap_content"
                                android:text="@string/gps" />

                            <RadioButton
                                android:id="@+id/map"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/map" />
                        </RadioGroup>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:cardCornerRadius="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView">

                    <LinearLayout
                        android:layout_width="360dp"
                        android:layout_height="wrap_content"
                        android:background="#B2452E3C"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/temp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="15dp"
                                android:text="@string/Temp"
                                android:textStyle="bold"
                                android:textColor="@color/white"
                                android:textSize="20dp" />

                            <ImageView
                                android:id="@+id/temp_expand"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="180dp"
                                android:layout_marginTop="16dp"
                                android:src="@drawable/baseline_keyboard_arrow_down_24" />
                        </LinearLayout>

                        <RadioGroup
                            android:id="@+id/temp_radio"
                            android:layout_width="match_parent"
                            android:visibility="gone"
                            android:layout_height="match_parent">

                            <RadioButton
                                android:id="@+id/celsius"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/Celsius" />

                            <RadioButton
                                android:id="@+id/kelvin"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/Kelvin" />

                            <RadioButton
                                android:id="@+id/fahrenheit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/Fahrenheit" />
                        </RadioGroup>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:cardCornerRadius="20dp"
                    app:layout_constraintEnd_toEndOf="@+id/cardView3"
                    app:layout_constraintStart_toStartOf="@+id/cardView3"
                    app:layout_constraintTop_toBottomOf="@+id/cardView3">

                    <LinearLayout
                        android:layout_width="360dp"
                        android:layout_height="wrap_content"
                        android:background="#B2452E3C"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/wind"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="15dp"
                                android:textStyle="bold"
                                android:text="@string/wind_speed"
                                android:textColor="@color/white"
                                android:textSize="20dp" />

                            <ImageView
                                android:id="@+id/wind_expand"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="180dp"
                                android:layout_marginTop="16dp"
                                android:src="@drawable/baseline_keyboard_arrow_down_24" />
                        </LinearLayout>

                        <RadioGroup
                            android:id="@+id/wind_radio"
                            android:visibility="gone"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <RadioButton
                                android:id="@+id/m_s"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/meter_sec" />

                            <RadioButton
                                android:id="@+id/m_h"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/miles_hour" />

                        </RadioGroup>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:cardCornerRadius="20dp"
                    android:layout_marginBottom="70dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/cardView4"
                    app:layout_constraintStart_toStartOf="@+id/cardView4"
                    app:layout_constraintTop_toBottomOf="@+id/cardView4">

                    <LinearLayout
                        android:layout_width="360dp"
                        android:layout_height="wrap_content"
                        android:background="#B2452E3C"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/lan"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="15dp"
                                android:text="@string/language"
                                android:textColor="@color/white"
                                android:textSize="20dp"
                                android:textStyle="bold" />

                            <ImageView
                                android:id="@+id/lan_expand"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="195dp"
                                android:layout_marginTop="16dp"
                                android:src="@drawable/baseline_keyboard_arrow_down_24" />
                        </LinearLayout>

                        <RadioGroup
                            android:id="@+id/lan_radio"
                            android:visibility="gone"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <RadioButton
                                android:id="@+id/english"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/english" />

                            <RadioButton
                                android:id="@+id/arabic"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/arabic" />

                        </RadioGroup>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>